--- a/js-intergrated-form/js-form-layout.css
+++ b/js-intergrated-form/js-form-layout.css
@@ -1,8 +1,16 @@
-body{
 
-    width: 100%;
-    height: 100%;
-    display: grid;
-    place-content: center;
+
+
+
+
+div.container{
+
+position: relative;
+left: 35%;
+}  
+
+div#output{
+
+    position: relative;
+    top: 20em;
 }
-
